# fat32diropt

./: CMakeLists.txt  LICENSE  README.md  main.cpp
